wrap fixed

--- a/src/Pages/styles/Menu.css
+++ b/src/Pages/styles/Menu.css
@@ -38,11 +38,12 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    flex-wrap: wrap;
     gap: 1em;
+    margin-block-end: -0.5em;
 }
 
 .menu__new .menu__new-add{
-    margin-block-end: -1em;
     color: var(--bg-primary-800);
     padding-inline: 2em;
     padding-block: 0.5em;
